# partest

./: Cargo.toml  README.md  setup-worker-macos.sh
src/: cli.rs  daemon.rs  discovery.rs  main.rs  run.rs  ssh.rs  status.rs
