[package]
name = "partest"
version = "0.1.0"
edition = "2024"
description = "Distributed cargo test runner using nextest partitioning"
license = "MIT"

[[bin]]
name = "partest"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
flume = "0.11"
futures = "0.3"
gethostname = "0.5"
indicatif = "0.17"
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.49"
russh-keys = "0.49"
shellexpand = "3"
ssh-key = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
